wp-content/themes/theme/styles/modules/navigation.css
/*––––
	 style main navigation strip items
	 and some general styles
	––––––––––––––––––––––––––––*/

	body, html {
		-webkit-overflow-scrolling: touch;
		overflow-x: hidden;
		height: 100%;
	}
nav {
	border-top: 2px solid var(--green);
	position: relative;
	z-index: 1000;
	overflow-y: auto;
	overflow-x: hidden;
	-webkit-overflow-scrolling: touch;

	& .inner {
			background-color: #f8f8f8;

	}
}

.strip {
	position: relative;
	padding: 25px;
	background-color: var(--white);


	& .logo {
		padding: 0;
		display: inline-block;
		padding-right: 50px;
	}

	& .menu-header-navigation-container {
		display: none;
	}
}

.handle {
	color: var(--green);
	cursor: pointer;
	position: absolute;
	right: 15px;
	top: 50%;
	transform: translateY(-50%);

	& .label {
		font-size: 12px;
		padding-right: 8px;
	}

	& .arrow {
		border: 1px solid var(--green);
		padding: 8px 15px;
		font-size: 16px;
		display: inline-block;
	}
}

.desktop-cta {
	display: none;
}



/*––––
	style the menu items from wp
	––––––––––––––––––––––––––––*/
.dropdown {
	padding-bottom: 30px;
	display: none;
	overflow-y: auto;
	overflow-x: hidden;
	-webkit-overflow-scrolling: touch;
	height: 100vh;

	& ul {
		padding: 0;
		margin-bottom: 0;


		& li {
			text-align: center;
			position: relative;
			padding: 12px 0;

			&:hover {
				color: var(--green);
			}
		}

		& a {
			display: block;
		}
	}
}



/*––––
	styles the cta's for mobile
	––––––––––––––––––––––––––––*/
.mobile-cta {
	padding-top: 25px;
	margin: 0 15px;

	& a {
		text-align: center;
		display: block;
		margin-bottom: 20px;
	}
}



/*––––
	some helper classes for the
	mobile menu
	––––––––––––––––––––––––––––*/
.caret {
	&:after {
		content: '\0025BE';
		transform: rotate(180deg);
		position: absolute;
		height: 10px;
		line-height: 25px;

	}
}

.ds-caret {
	color: var(--green);
	position: relative;

	&::after {
		content: '\0025BE';
		transform: rotate(180deg);
		color: var(--green);
		display: inline-block;
		position: absolute;
		bottom: -12px;
		left: 49.5%;
	}

}


.menu-header-navigation-container {}
.menu {}

/*––––
	media queries
	––––––––––––––––––––––––––––*/
@media screen and (min-width: 1150px) {
	.desktop-cta {
		display: inline-block;
		position: absolute;
		right: 20px;
		top: 50%;
		transform: translateY(-50%);
	}

	.handle {
		display: none;
	}

	.strip {
		& .menu-header-navigation-container {
			display: inline-block;
		}

		& ul {
			padding: 0;

			& li {
				display: inline-block;
				padding: 0 10px;

				&:hover {
					color: var(--green);
				}
			}
		}
	}

	.ds-caret::after {
			bottom: -20px;
	}
}

